db/istio/gateway-mongodb.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mongodb
  namespace: mongodb
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: mongo
        number: 8080
        protocol: mongo
      #port:
      #  name: tls-mongo
      #  number: 443
      #  protocol: TLS
#      tls:
#        credentialName: mongodb-cert
#        mode: SIMPLE
