db/istio/virtualservice-mongodb.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
spec:
  hosts:
    - '*'
  gateways:
  - mongodb
  tcp:
  - match:
    - port: 443
    route:
    - destination:
        host: mongodb
        port:
          number: 27017
